# sport-prediction-webapp

./: .gitignore  PROJECT-SUMMARY.md  README.md
backend/: .gitignore  pyproject.toml  requirements-dev.txt  requirements.txt  run_ingest.sh
backend/alembic/: env.py
backend/alembic/versions/: 20260719_0001_initial_schema.py  20260720_0002_validation_status_enum.py  20260721_0003_pipeline_jobs_and_discovery_columns.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  rate_limit.py  security.py  sessions.py  settings.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py  discovery.py  espn_client.py  ingestion.py
backend/app/services/external_apis/: __init__.py  euroleague_client.py  fiba_client.py  grand_slam_client.py  ibl_client.py  motogp_client.py
backend/app/workers/: discovery.py  ingest.py
backend/scripts/: compare_discovery.py  compare_with_old_engine.py
backend/tests/: conftest.py  test_api.py  test_change_pin.py  test_core.py  test_discovery.py  test_ingestion.py
deploy/caddy/: Caddyfile
deploy/systemd/: sport-prediction-backend.service  sport-prediction-discovery.service  sport-prediction-discovery.timer  sport-prediction-frontend.service  sport-prediction-ingest.service  sport-prediction-ingest.timer
docs/: architecture.md  data-model-notes.md
docs/architecture/: migration-roadmap.md
engine/data/: jobs.json
frontend/: .env.production  index.html  package-lock.json  package.json  vitest.config.ts
scripts/: run-ingestion.sh  run_ingest.sh  sync-reports-to-lxc.sh
(+52 files in other folders)
